--- a/panoptes/static/src/css/style.css
+++ b/panoptes/static/src/css/style.css
@@ -16427,5 +16427,12 @@ body {
   background-color: #3a4248;
 }
 
-
 /*# sourceMappingURL=style.css.map */
+
+.terminal {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
